<resources>
    <string name="app_name">Ecommerce Android App</string>
    <string name="title_home">Home</string>
    <string name="title_shop">Shop</string>
    <string name="title_bag">Bag</string>
    <string name="text_forgot_password">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_profile">Profile</string>
</resources>
